kubernetes/ns-common/zipkin/01-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zipkin-deployment
  namespace: common
  labels:
    app: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      - name: zipkin
        image: tasktrack.telekom.at/remote-docker/openzipkin/zipkin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9410
        - containerPort: 9411
        resources:
          limits:
            memory: "4Gi"
            cpu: "1000m"
          requests:
            memory: "2Gi"
            cpu: "500m"
      imagePullSecrets:
      - name: tasktrack.telekom.at
