kubernetes/ns-common/zipkin/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  namespace: common
spec:
  selector:
    app: zipkin
  ports:
  - port: 9410
    targetPort: 9410
  - port: 9411
    targetPort: 9411
